syntax = "proto3";
package ncs.game.pass;
option go_package = "grpc";

import "google/api/annotations.proto";

message Item {
    int32 id = 1;
    int32 level = 2;
    string name = 3;
    int32 amount = 4;
    int64 length = 5;
}

message GetRewardsReq {
}

message GetRewardsResp {
    int32 season = 1;
    repeated Item free_rewards = 2;
    repeated Item adv_rewards = 3;
}

message UsePointBoxReq {
    int64 uid = 1;
    bool all = 2;
}

message UsePointBoxResp {
}

service Pass {
    rpc GetRewards (GetRewardsReq) returns (GetRewardsResp) {
        option (google.api.http) = {
            get: "/game/pass/rewards"
        };
    }
    rpc UsePointBox (UsePointBoxReq) returns (UsePointBoxResp) {
        option (google.api.http) = {
            post: "/game/pass/pointbox"
            body: "*"
        };
    }
}